<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CreateOrder">
    <TextView
        android:id="@+id/textViewHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_user"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/textViewHello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radioButtonTea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:text="@string/tea"
            android:checked="true"
            android:onClick="onClikcChangeDrink"/>

        <RadioButton
            android:id="@+id/radioButtonCoffe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:text="@string/Coffe"
            android:onClick="onClikcChangeDrink"/>


</RadioGroup>
    <TextView
        android:id="@+id/textViewAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Add"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="@color/blue"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <CheckBox
        android:id="@+id/checkboxMilk"
        android:text="@string/Milk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/textViewAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/checkboxSugar"/>

    <CheckBox
        android:id="@+id/checkboxSugar"
        android:text="@string/Sugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/textViewAdd"
        app:layout_constraintStart_toEndOf="@id/checkboxMilk"
        app:layout_constraintEnd_toStartOf="@id/checkboxLemon"/>
    <CheckBox
        android:id="@+id/checkboxLemon"
        android:text="@string/Limon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/textViewAdd"
        app:layout_constraintStart_toEndOf="@id/checkboxSugar"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/textViewchoseDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/chooseDrink"
        android:textSize="24sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/checkboxSugar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
        android:id="@+id/spinnerTea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:entries="@array/options_of_tea"
        android:visibility="visible"
        android:textColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/textViewchoseDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Spinner
        android:id="@+id/spinnerCoffe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:entries="@array/options_of_coffe"
        android:visibility="invisible"
        android:textColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/textViewchoseDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
        android:id="@+id/buttonSendOrder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/sendOrder"
        android:src="@drawable/zakaz"
        android:onClick="onClikcSendOrder"
        app:layout_constraintTop_toBottomOf="@id/spinnerCoffe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>